--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -6,13 +6,13 @@
   "keywords": ["vue", "ui", "component library"],
   "author": "EricLee",
   "license": "MIT",
-  "homepage": "https://github.com/gkn1234/openx-ui/blob/master/README.md",
+  "homepage": "https://github.com/EricLeeN1/eric-ui/blob/master/README.md",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gkn1234/openx-ui.git"
+    "url": "git+https://github.com/EricLeeN1/eric-ui.git"
   },
   "bugs": { 
-    "url" : "https://github.com/gkn1234/openx-ui/issues"
+    "url" : "https://github.com/EricLeeN1/eric-ui/issues"
   },
   "scripts": {
     "build": "echo build",
