--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ericui/input",
+  "name": "@ericui/ui",
   "version": "0.0.0",
   "description": "",
   "keywords": [
@@ -21,13 +21,13 @@
     "build": "vite build",
     "test": "echo test"
   },
-  "main": "./dist/Ericui-input.umd.js",
-  "module": "./dist/Ericui-input.mjs",
+  "main": "./dist/Ericui-ui.umd.js",
+  "module": "./dist/Ericui-ui.mjs",
   "types": "",
   "exports": {
     ".": {
-      "require": "./dist/Ericui-input.umd.js",
-      "module": "./dist/Ericui-input.mjs",
+      "require": "./dist/Ericui-ui.umd.js",
+      "module": "./dist/Ericui-ui.mjs",
       "types": ""
     }
   },
@@ -37,6 +37,8 @@
   ],
   "publishConfig": {},
   "dependencies": {
+    "@ericui/button": "workspace:^",
+    "@ericui/input": "workspace:^",
     "@ericui/shared": "workspace:^"
   }
 }
