--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "eric-ui",
   "private": true,
   "scripts": {
-    "build:ui": "pnpm --filter './packages/**' run build"
+    "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
+    "type:src": "vue-tsc -p tsconfig.src.json --noEmit --composite false",
+    "build:ui": "pnpm run type:src && pnpm --filter './packages/**' run build"
   },
   "devDependencies": {
+    "@types/node": "^22.4.1",
     "@vitejs/plugin-vue": "^5.1.1",
     "sass": "^1.77.8",
     "typescript": "^5.5.4",
-    "vite": "^5.3.5"
+    "vite": "^5.3.5",
+    "vue-tsc": "^2.0.29"
   },
   "dependencies": {
     "vue": "^3.4.34"
