--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eric-ui",
   "private": true,
   "scripts": {
+    "lint:script": "eslint --ext .js,.jsx,.ts,.tsx,.vue --fix ./",
     "clean:type": "rimraf ./dist",
     "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
     "type:src": "pnpm run clean:type && vue-tsc -p tsconfig.src.json --composite false --declaration --emitDeclarationOnly",
@@ -10,12 +11,21 @@
   },
   "devDependencies": {
     "@types/node": "^22.4.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-vue": "^5.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.27.0",
     "rimraf": "^6.0.1",
     "sass": "^1.77.8",
     "tsx": "^4.17.0",
-    "typescript": "^5.5.4",
+    "typescript": "^5.0.0",
     "vite": "^5.3.5",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.0.29"
   },
   "dependencies": {
