--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "eric-ui",
   "private": true,
   "scripts": {
+    "lint-staged": "lint-staged",
+    "prepare": "husky install",
+    "lint:style": "stylelint --fix ./**/*.{css,scss,vue,html}",
     "lint:script": "eslint --ext .js,.jsx,.ts,.tsx,.vue --fix ./",
     "clean:type": "rimraf ./dist",
     "type:node": "tsc -p tsconfig.node.json --noEmit --composite false",
@@ -10,6 +13,8 @@
     "build:ui": "pnpm run type:src && pnpm --filter ./packages/** run build && pnpm run mv-type"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/node": "^22.4.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
@@ -20,8 +25,16 @@
     "eslint-define-config": "^2.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-vue": "^9.27.0",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
     "sass": "^1.77.8",
+    "stylelint": "^15.0.0",
+    "stylelint-config-recess-order": "^5.0.1",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-stylistic": "^0.4.5",
     "tsx": "^4.17.0",
     "typescript": "^5.0.0",
     "vite": "^5.3.5",
